 . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
 . [NEW] ProfilingTimer: new class to test performance (issue #XXX)
 . [FIX] Box2d: GLES-DebugDraw draws non-solid circles as non-solid circles (issue #831)
 . [FIX] EAGLView: swapBuffers doesn't bind the color buffer. It assumes it is already bound (issue #XXX)
 . [FIX] Protocols: CCAnimationProtocol removed. Merged into CCAnimation (issue #XXX)
 . [FIX] Protocols: CCFrameProtocol removed. Merged into CCSprite (issue #XXX)
 . [FIX] Ribbon: fixed memory corruption bug (issue #XXX)
 . [FIX] Ribbon/RenderTexture: uses objective-c like ivars (part of issue #733)
 . [FIX] Templates: Improved logic in template installer (issue #XXX)
 . [FIX] Templates: Generates optimized binaries. ARMv7 binaries have thumb-2 enabled (issue #XXX)
 . [FIX] SpriteSheet: Improved doxygen documentation (issue #827)
 . [FIX] SpriteFrameCache: logs warning if frame is not found
 . [FIX] Xcode: uses optimized binary. ARMv7 binary has thumb-2 enabled (issue #XXX)
 . [3RD] Box2d: updated to r88 (issue #XXX)
 
version 0.99.1 - 19-Mar-2010
 . [FIX] Menu: If menu is not visible it doesn't receive touches (issue #88)
 . [FIX] Menu: MenuItemLabel restores the scale property (issue #500)
 . [FIX] SpriteFrameCache: set singleton to nil when it is purged (issue #814)
 . [FIX] Templates: thumb-compilation turned off at project settings (already off in target settings) (issue #772)
 . [FIX] Texture2D allocs the right texturememory when using the non-premultiplied alg.(issue #813)
 . [FIX] Texture2D supports A8 textures (issue #816)
 . [3RD] Libpng: updated to v1.2.43 (libpng is only used by a cocos2d test)

version 0.99.1-rc - 12-Mar-2010
 . [NEW] Actions: new added actions: CCProgressTo, CCProgressFromTo (issue #783)
 . [NEW] CGPointExtensions: new add functions:  CGPointExtension like: clampf, ccpClamp, ccpFromSize,
			ccpCompOp, ccpLerp, ccpFuzzyEqual, ccpCompMult, ccpAngleSigned, ccpAngle,