@@ -16,6 +16,7 @@ Alexander, Edward
 Alexeev, Andrei
 Apple, Jonathan (http://www.jonathanapple.com/)
 Barta, Markus (http://markus.barta.com)
+Brain Fever Music (http://www.brainfevermedia.com/)
 Braunstein, Roger
 Copsey, Ben (http://allseeing-i.com/)
 Da Silva, Vitor Almedia (http://myplaymobile.com/)
@@ -60,7 +61,7 @@ Vecchi, Vinicius
 Whatley, David (http://www.criticalthoughtgames.com)
 Wright, Ginsberg N.
 Yang, Peng-Hua
-Yip, Lai
+Yip, Alex (http://www.zenkimoto.com/)
 Zemlyanov, Anton
 
 
