@@ -1,8 +1,0 @@
-//
-// Prefix header for all source files of the 'Box2D' target in the 'Box2D' project
-//
-
-#ifdef __OBJC__
-#import <Foundation/Foundation.h>
-#import <UIKit/UIKit.h>
-#endif
