@@ -1,5 +1,5 @@
 #import <TargetConditionals.h>
 
 #ifdef __OBJC__
-	#import <UIKit/UIKit.h>
+//	#import <UIKit/UIKit.h>
 #endif
