@@ -7,10 +7,11 @@ version 0.99.2 - XX-MMM-2010
  . [NEW] ProfilingTimer: new class to test performance (issue #XXX)
  . [FIX] Box2d: GLES-DebugDraw draws non-solid circles as non-solid circles (issue #831)
  . [FIX] EAGLView: swapBuffers doesn't bind the color buffer. It assumes it is already bound (issue #XXX)
+ . [FIX] Particles: constants stars with kCC (issue #809)
  . [FIX] Protocols: CCAnimationProtocol removed. Merged into CCAnimation (issue #XXX)
  . [FIX] Protocols: CCFrameProtocol removed. Merged into CCSprite (issue #XXX)
  . [FIX] Ribbon: fixed memory corruption bug (issue #XXX)
- . [FIX] Ribbon/RenderTexture: uses objective-c like ivars (part of issue #733)
+ . [FIX] Ribbon/RenderTexture: use objective-c like ivars (part of issue #733)
  . [FIX] Templates: Improved logic in template installer (issue #XXX)
  . [FIX] Templates: Generates optimized binaries. ARMv7 binaries have thumb-2 enabled (issue #XXX)
  . [FIX] SpriteSheet: Improved doxygen documentation (issue #827)
